--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,26 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width,initial-scale=1,minimal-ui" /><meta name="robots" content="noindex" /><title>Reliable Resume System</title></head><body>Nothing Here</body></html>
+<!DOCTYPE html>
+
+<html lang="en">
+
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimal-ui" />
+        <meta name="robots" content="noindex" />
+        <script>
+            import API from '/js/api.js';
+        </script>
+        <title>Reliable Resume System</title>
+    </head>
+
+    <body>
+        <div>
+            <p><b>Available API:</b></p>
+            <p>API.queryItem(form)</p>
+            <p>API.issueCertificate(form)</p>
+            <p>API.updateHash(form)</p>
+            <p>API.register(form)</p>
+        </div>
+    </body>
+
+</html>
