--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width,initial-scale=1,minimal-ui" />
         <meta name="robots" content="noindex" />
-        <script>
+        <script type="module">
+            'use strict';
             import API from '/js/api.js';
         </script>
         <title>Reliable Resume System</title>
