--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     	  </header>
 
     	<div class="w3-container">
-      <p>Issue resume item : certificate, start of employment or end of employment to the applicant.</p>
+      <p>Issue resume item (certificate, start of employment or end of employment) to the applicant.</p>
       <form name="issueForm" action="/certificate" method="post">
   		Issuer: <input type="text" name="issuer"><br>
 		Owner: <input type="text" name="owner"><br>
